--- a/tibetan_collection/pages/home/00_.md
+++ b/tibetan_collection/pages/home/00_.md
@@ -1,3 +1,3 @@
-Digital collection of archival and other rare Tibetan Studies holdings, primarily in the C.V. Starr East Asian Library at Columbia University; includes documents and photographs from the Tharchin Collection and the Lama Anagarika Govinda papers, 1945-1993, as well as some materials from the Tibet Information Network (TIN) Archives and the Meg McLagan Collection.
+Digital collection of archival and other rare Tibetan Studies holdings, primarily in the C.V. Starr East Asian Library at Columbia University; includes documents and photographs from the [Tharchin Collection](https://library.columbia.edu/libraries/eastasian/special_collections/tibetan-rare-books---special-collections/tharchin.html) and the [Lama Anagarika Govinda papers](https://library.columbia.edu/libraries/eastasian/special_collections/tibetan-rare-books---special-collections/govinda.html), 1945-1993, as well as some materials from the Tibet Information Network (TIN) Archives and the [Meg McLagan Collection](https://library.columbia.edu/libraries/eastasian/special_collections/tibetan-rare-books---special-collections/mclagan.html).
 
 Additionally, the Collection includes digital images of some fifty rare books and a limited amount of audio-visual materials, such as lectures by Tibetan Buddhist teachers, and oral-history and related interviews with Tibetan and Chinese scholars and cadres in China and with Tibetans living in exile on their lives and historical events in the 20th century.
